<resources>
    <!--Main Activity layout-->
    <string name="app_name">MapTest</string>
    <string name="dev_mode_on">Dev Mode is ON</string>
    <string name="dev_mode_off">Dev Mode is OFF</string>
    <string name="start_service">Start Service</string>
    <string name="monitoring_on">Navigation is ON</string>
    <string name="monitoring_off">Navigation is OFF</string>
    <string name="first_distance_unit">ft</string>
    <string name="second_distance_unit">mi</string>
    <string name="debug_file_success">Debug Operation Successful</string>
    <string name="debug_file_failure">File debug operation failed</string>
    <string name="connect_mi_band">Connect MiBand</string>
    <string name="vibrate_distance_minor">Select the notification threshold (minor units)</string>
    <string name="vibrate_distance_major">Select the notification threshold (major units)</string>
    <string name="push_notification_title">Push Notification Title</string>
    <string name="push_notification_title_off">Off</string>
    <string name="push_notification_title_emoji">Emoji</string>
    <string name="push_notification_title_long_text">Long text</string>
    <string name="push_notification_title_short_text">Short text</string>
    <string name="push_notification_title_character">Character</string>
    <string name="push_notification_text">Push Notification Text</string>
    <string name="push_notification_text_off">Off</string>
    <string name="push_notification_text_street">Street</string>
    <string name="push_notification_text_big_symbol">Big Symbol</string>
    <string name="push_notification_text_character">Character</string>

    <!--MiBand connect layout-->
    <string name="status0">No device connected</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="start_scan">Find device</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="disconnect_band">Disconnect Band</string>
    <string name="connect_band">Connect Band</string>
    <string name="status_doScan">Scan/connect to devices</string>
    <string name="vibrate_band">Vibrate</string>
    <string name="vibrate_on_time">on time(milli)</string>
    <string name="vibrate_off_time">off time(millis)</string>
    <string name="vibrate_repeat">Repeat Pattern</string>
    <string name="vibrate_led">LED on/off</string>
    <string name="devc">Developed by jashgopani</string>

    <string name="status_disconnected">DISCONNECTED</string>
    <string name="status_connected">CONNECTED</string>
    <string name="status_paired">PAIRED</string>
    <string name="status_charging">CHARGING</string>
    <string name="status_discharging">DISCHARGING</string>
    <string name="status_not_available">NOT AVAILABLE</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnecting">Disconnecting…</string>

    <!--Notification information dialog box-->
    <string name="notification_listener_service">"Notification Listener Service"</string>
    <string name="notification_listener_service_explanation">"For the app to work, you need to enable the Notification Listener Service. Enable it now?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
