<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:animateLayoutChanges="true"
        android:columnCount="2"
        android:foregroundGravity="center|center_vertical">

        <TextView
            android:id="@+id/statusTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:text="@string/monitoring_off"
            android:textAlignment="center"
            android:textSize="24sp" />


        <ToggleButton
            android:id="@+id/toggleMonitoringBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:text="@string/start_service"
            android:textAlignment="center"
            android:textOff="@string/monitoring_off"
            android:textOn="@string/monitoring_on" />

        <Button
            android:id="@+id/gotoConnectBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:text="@string/connect_mi_band"
            android:textAlignment="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:text="@string/vibrate_distance_minor"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/thresholdTvMinor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="0dp"
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="500ft" />

        <SeekBar
            android:id="@+id/thresholdSeekMinor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginTop="0dp"
            android:max="@integer/first_unit_max"
            android:orientation="vertical"
            android:progress="@integer/first_unit_max" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:text="@string/vibrate_distance_major"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/thresholdTvMajor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="0dp"
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="1mi" />

        <SeekBar
            android:id="@+id/thresholdSeekMajor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:max="@integer/second_unit_max_x10"
            android:orientation="vertical"
            android:progress="@integer/second_unit_max_x10" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:text="Push Notifications"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="0dp"
            android:id="@+id/radio_push_setting_group"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Off"/>
            <RadioButton android:id="@+id/radio_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="emoji"/>
            <RadioButton android:id="@+id/radio_long_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Long text"/>
            <RadioButton android:id="@+id/radio_short_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Short text"/>
            <RadioButton android:id="@+id/radio_character"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="character"/>
        </RadioGroup>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="Band Status"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:background="@color/colorPrimary"
            android:text="(Click on battery level to refresh)"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/bandMacTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:paddingTop="8dp"
            android:text="Device Mac"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bandBatteryStatusTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:paddingTop="8dp"
            android:text="--%"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bandConnectedStatusTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:paddingTop="8dp"
            android:text="@string/status_disconnected"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/bandChargingStatusTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:paddingTop="8dp"
            android:text="@string/status_not_available"
            android:textAlignment="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_green_light"
            android:text="Vibration Setting"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:paddingTop="8dp"
            android:text="Vibrate only for "
            android:textAlignment="center" />


        <Spinner
            android:id="@+id/vibrateOnlySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:paddingTop="8dp"
            android:text="@string/status_discharging"
            android:textAlignment="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill|center"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_orange_light"
            android:text="Test Vibrations"
            android:textAlignment="center" />

        <Button
            android:id="@+id/testLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="onClick"
            android:text="Left" />

        <Button
            android:id="@+id/testRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="onClick"
            android:text="Right" />

        <Button
            android:id="@+id/testStraight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="onClick"
            android:text="Straight" />

        <Button
            android:id="@+id/testUturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="onClick"
            android:text="U-Turn" />

        <Button
            android:id="@+id/testAlternate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="onClick"
            android:text="Alternate\n(left / Right / Straight)" />

        <Button
            android:id="@+id/testArrived"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:onClick="onClick"
            android:text="Arrived / Start / Unknown" />

        <TextView
            android:id="@+id/logtv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="" />
    </GridLayout>
</ScrollView>